--- a/client/src/components/Footer/Footer.module.less
+++ b/client/src/components/Footer/Footer.module.less
@@ -5,7 +5,7 @@
     align-items: center;
 }
 .button{
-    border: 0.1vw solid #000;
+    border: 0.1vw solid #fff;
     background-color: transparent;
     cursor: pointer;
     transition: 0.5s;
