--- a/client/src/components/ui/Preloader/Preloader.less
+++ b/client/src/components/ui/Preloader/Preloader.less
@@ -10,7 +10,7 @@
     width: 5vw;
     height: 5vw;
     border-radius: 50%;
-    border: 3.2vw dashed #000;
+    border: 3.2vw dashed #0c0c0c;
     transition: 0.5s;
     animation: spinner 1s infinite alternate-reverse;
 }
