--- a/client/src/index.less
+++ b/client/src/index.less
@@ -18,12 +18,13 @@
         background-color: #000;
         border-radius: 100vw;
     }
+    color: white;
 }
 #root{
     position: relative;
 }
 body{
-    background-color: #ffdcc9;
+    background-color: #0c0c0c;
 }
 input, button{
     outline: none;
