--- a/client/src/pages/Auth/Auth.less
+++ b/client/src/pages/Auth/Auth.less
@@ -7,7 +7,7 @@
     flex-direction: column;
 }
 .label{
-    font-size: 5vw;
+    font-size: 25px;
 }
 .deciding{
     width: 100%;
@@ -31,17 +31,16 @@
     font-size: 2.8vw;
     padding: 2vw 3.2vw;
     margin-bottom: 2.65vw;
-    border: 0.1vw solid #000;
+    border: 0.1vw solid #fff;
     background-color: transparent;
 }
 .submit{
-    width: 100%;
-    padding: 4vw 0;
+    padding: 4vw 8vw;
     font-size: 2.8vw;
     background-color: transparent;
     cursor: pointer;
-    color: #000;
-    border: 0.1vw solid #000;
+    color: #fff;
+    border: 0.1vw solid #fff;
 }
 
 @media(max-width: 1200px){
