--- a/client/src/pages/Main/Main.less
+++ b/client/src/pages/Main/Main.less
@@ -57,7 +57,7 @@ input{
 .search{
     width: 100%;
     height: 4.68vw;
-    border: 0.1vw solid #000;
+    border: 0.1vw solid #fff;
     border-radius: 3vw;
     background-color: transparent;
     padding: 0 6.4vw;
@@ -80,7 +80,7 @@ input{
     font-size: 1.8vw;
     cursor: pointer;
     background-color: transparent;
-    border: 0.1vw solid #000;
+    border: 0.1vw solid #fff;
 }
 .body{
     width: 100%;
@@ -90,18 +90,40 @@ input{
     align-items: center;
     flex-direction: column;
 }
-.addButton{
-    cursor: pointer;
-    border-radius: 50%;
-    width: 3.5vw;
-    height: 3.5vw;
+.catalogs_line{
     display: flex;
+    width: 100%;
     justify-content: center;
     align-items: center;
-    font-size: 2vw;
+    margin-bottom: 50px;
+}
+.catalogs_text{
+    font-size: 40px;
+}
+.catalog{
+    border: 0;
+    color: #fff;
+    cursor: pointer;
+    font-size: 30px;
+    padding: 10px 20px;
     background-color: transparent;
-    border: 0.1vw solid #000;
+}
+.catalog:hover{
     color: #000;
+    background-color: #fff;
+}
+.catalog::after{
+    content: "/";
+    color: #fff;
+    font-size: 30px;
+    margin-left: 30px;
+}
+.catalog:hover::after{
+    color: #000;
+}
+.catalogs_button{
+    font-size: 30px;
+    color: #fff;
 }
 .notes{
     padding-top: 3.2vw;
