--- a/client/src/components/Note/Note.less
+++ b/client/src/components/Note/Note.less
@@ -1,31 +1,52 @@
 .note{
-    margin-bottom: 4.6vw;
-    cursor: pointer;
+    width: 500px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 50px;
+}
+.line{
     width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    z-index: 2;
-    color: #0c0c0c;
-    transition: 0.5s;
-}
-.leftSide{
-    width: 22%;
-    padding-right: 1.3vw;
-    display: flex;
     justify-content: space-between;
-    align-items: flex-end;
-    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
-.rightSide{
-    width: 78%;
-    padding-left: 1.3vw;
-    padding-top: 0;
-    z-index: 2;
+.date{
+    font-size: 25px;
+}
+.date::after, .date::before{
+    content: "";
+    display: inline-block;
+    width: 2px;
+    height: 15px;
+    background-color: #fff;
+    margin: 0 10px;
+}
+.action{
+    width: 145px;
     background-color: transparent;
+    border: 0;
+    padding: 0;
+    transition: 0.5s;
+    cursor: pointer;
+    font-size: 40px;
+    text-align: left;
+    &:nth-child(1){
+        text-align: right;
+    }
+}
+.action:hover{
+    background-color: #fff;
+    color: #000;
+}
+.main{
+    width: 100%;
+    text-align: center;
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: start;
+    align-items: center;
     flex-direction: column;
 }
 .header{
@@ -33,109 +54,34 @@
     overflow: hidden;
     white-space: nowrap;
     max-width: 100%;
-    font-size: 2.5vw;
+    font-size: 50px;
     font-weight: bold;
 }
 .body{
+    max-width: 100%;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
-    max-width: 100%;
-    margin-top: 1vw;
-    font-size: 1.5vw;
-    font-weight: normal;
-    font-family: Brush Script MT, Brush Script Std;
-    font-style: italic;
-    letter-spacing: 0.3vw;
+    margin-top: 15px;
+    font-size: 15px;
+    letter-spacing: 1.5px;
 }
-.date{
-    margin-top: 0.5vw;
-    font-size: 1.3vw;
-}
-.delete{
-    margin-top: 1.4vw;
-    background-color: transparent;
-    border: 0;
-    padding: 10px 0 10px 50px;
-    transition: 0.5s;
-    cursor: pointer;
-    font-size: 2.2vw;
-}
-.delete:hover{
-    background-color: #fff;
-    color: #000;
-}
-
-@media(max-width: 1200px){
-    .header{
-        font-size: 3.5vw;
-    }
-    .body{
-        font-size: 2.5vw;
-    }
-    .date{
-        font-size: 2.3vw;
-    }
-    .delete{
-        font-size: 3.2vw;
-    }
-}
-@media(max-width: 992px){
-    .header{
-        font-size: 4.5vw;
-    }
-    .body{
-        font-size: 3.5vw;
-    }
-    .date{
-        font-size: 3.3vw;
-    }
-    .delete{
-        font-size: 4.2vw;
-    }
-}
-@media(max-width: 768px){
+@media (max-width: 575px) {
     .note{
-        margin-top: 10vw;
-    }
-    .rightSide{
-        padding-left: 2vw;
-    }
-    .leftSide{
-        padding-right: 2vw;
-    }
-    .header{
-        font-size: 6.5vw;
-    }
-    .body{
-        font-size: 4.5vw;
-    }
-    .date{
-        font-size: 3.5vw;
-        margin-top: 1.2vw;
-    }
-    .delete{
-        margin-top: 1.6vw;
-        font-size: 6.2vw;
-    }
-}
-@media(max-width: 576px){
-    .rightSide{
-        width: 39%;
-    }
-    .header{
-        font-size: 30px;
-    }
-    .body{
-        margin: 0;
+        width: 350px;
         margin-top: 30px;
+    }
+    .action{
+        width: 90px;
         font-size: 25px;
     }
-    .date{
-        font-size: 27px;
+    .header{
+        margin-top: 10px;
+        font-size: 40px;
     }
-    .delete{
-        font-size: 25px;
-        margin-top: 30px;
+    .body{
+        margin-top: 10px;
+        font-size: 20px;
+        margin-top: 0;
     }
 }
