--- a/client/src/components/ui/AddButton/AddButton.less
+++ b/client/src/components/ui/AddButton/AddButton.less
@@ -1,12 +1,12 @@
 .addButton{
     cursor: pointer;
     border-radius: 50%;
-    width: 3.5vw;
-    height: 3.5vw;
+    width: 70px;
+    height: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2vw;
+    font-size: 40px;
     background-color: transparent;
     border: 2px solid #ffffff;
     color: #ffffff;
