--- a/client/src/components/ui/ModalKit/ModalButtons/ModalButtons.less
+++ b/client/src/components/ui/ModalKit/ModalButtons/ModalButtons.less
@@ -18,11 +18,16 @@
     background-color: #000;
     color: #fff;
 }
-button:hover{
+.button:hover{
     background-color: #000;
     color: #fff;
 }
 .filled:hover{
     background-color: #fff;
     color: #000;
+}
+@media (max-width: 575px) {
+    .button{
+        font-size: 20px;
+    }
 }
