--- a/client/src/index.less
+++ b/client/src/index.less
@@ -5,7 +5,8 @@
     box-sizing: border-box;
     text-decoration: none;
     ::-webkit-scrollbar {
-        width: 0.3vw;
+        width: 5px;
+        height: 5px;
         position: absolute;
         top: 0;
         right: 0;
@@ -15,7 +16,7 @@
         border-radius: 100vw;
     }
     ::-webkit-scrollbar-thumb {
-        background-color: #000;
+        background-color: #fff;
         border-radius: 100vw;
     }
     color: white;
@@ -25,6 +26,7 @@
 }
 body{
     background-color: #0c0c0c;
+    position: relative;
 }
 input, button{
     outline: none;
