--- a/client/src/pages/CheckNote/CheckNote.less
+++ b/client/src/pages/CheckNote/CheckNote.less
@@ -2,26 +2,54 @@
     width: 100%;
     min-height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 .container{
     width: 100%;
     min-height: 100vh;
-    padding: 1.5vw 19.09910295333249vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.box{
+    width: 50%;
+    max-width: 770px;
+    padding: 30px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
+    background-color: #fff;
+    position: relative;
 }
 .top{
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    &Text{
+    &_text{
         color: #fff;
-        font-size: 2vw;
+        font-size: 20px;
+        &_square{
+            width: 50px;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center; 
+            background-color: #000;
+            border: 1px solid #000;
+            transition: 0.5s;
+        }
+        &_square:hover{
+            background-color: #fff;
+            color: #000;
+        }
+    }
+    &_text:nth-child(2){
+        color: #000;
     }
 }
 .center{
@@ -31,14 +59,27 @@
     align-items: center;
     flex-direction: column;
 }
+.color{
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    width: 50px;
+    height: 50px;
+    padding: 0 3px; 
+    background-color: #fff;
+    border: 0;
+}
 .field{
     width: 100%;
     border: 0;
     background-color: transparent;
-    font-size: 2vw;
+    font-size: 25px;
     outline: none;
     padding-left: 30px;
-    border-left: 2px solid #fff;
+    border-left: 3px solid #000;
+    color: #000;
 }
 .fieldContainer{
     width: 100%;
@@ -46,97 +87,39 @@
     justify-content: center;
     align-items: start;
     flex-direction: column;
-    margin-top: 6.1vw;
-    &:nth-child(2){
-        margin-top: 3.1vw;
-    }
+    margin-top: 50px;
 }
 .counter{
-    font-size: 1.5vw;
-    margin-bottom: 1vw;   
+    font-size: 15px;
+    margin-bottom: 10px;
+    color: #000;
+    opacity: 0.5;   
 }
 .body{
-    padding-right: 1vw;
-    height: 30vw;
+    padding-right: 15px;
+    height: 35vh;
+    max-height: 475px;
     resize: none;
     overflow-x: hidden;
+    overflow-y: scroll;
 }
 @media(max-width: 1200px) {
-    .date{
-        font-size: 3vw;
-    }
-    .fieldContainer:nth-child(2){
-        margin-top: 5vw;
-    }
-    .counter{
-        font-size: 2vw;
-    }
-    .field{
-        font-size: 3vw;
-    }
-    .body{
-        height: 40vw;
+    .box{
+        width: 60%;
     }
 }
 @media(max-width: 992px) {
-    .date{
-        font-size: 4vw;
-    }
-    .field{
-        font-size: 4vw;
-    }
-    .fieldContainer:nth-child(2){
-        margin-top: 7vw;
-    }
-    .counter{
-        font-size: 2.5vw;
-    }
-    .body{
-        height: 50vw;
+    .box{
+        width: 80%;
     }
 }
-@media(max-width: 768px){
-    .container{
-        padding: 3vw 11.80414274000772vw;
-    }
-    .date{
-        font-size: 5vw;
-    }
-    .fieldContainer:nth-child(2){
-        margin-top: 9vw;
-    }
-    .counter{
-        font-size: 20px;
-        color: grey;
-    }
-    .field{
-        font-size: 5vw;
-    }
-    .body{
-        height: 105vw;
+@media(max-width: 768px) {
+    .box{
+        width: 90%;
     }
 }
-@media(max-width: 576px){
-    .container{
-        padding: 5vw 4.508970749344793vw;
-    }
-    .date{
-        font-size: 30px;
-    }
-    .fieldContainer{
-        margin-top: 50px;
-    }
-    .fieldContainer:nth-child(2){
-        margin-top: 11vw;
-    }
-    .counter{
-        font-size: 20px;
-        color: grey;
-    }
+@media(max-width: 768px) {
     .field{
-        font-size: 9vw;
-    }
-    .body{
-        height: 160vw;
+        padding-left: 15px;
     }
 }
