--- a/client/src/components/Catalog/Catalog.less
+++ b/client/src/components/Catalog/Catalog.less
@@ -1,14 +1,14 @@
 .catalog{
-    width: 100%;
+    width: 550px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 30px;
 }
 .catalog_body{
-    width: 100%;
+    width: 310px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 30px;
     border-radius: 50px;
@@ -20,30 +20,61 @@
 }
 .name{
     font-size: 35px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
-.edit{
-    background-color: transparent;
-    border: 0;
-    font-size: 40px;
-    color: #fff;
-    cursor: pointer;
-}
-.date{
-    color: #fff;
-    font-size: 30px;
-}
-.delete{
+.side{
     cursor: pointer;
     width: 120px;
     height: 120px;
     box-sizing: border-box;
     border-radius: 50%;
-    background-color: #fff;
-    color: #000;
+    background-color: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-left: 20px;
     font-size: 30px;
+    transition: 0.5s;
+}
+.side:hover{
+    color: #000;
+    background-color: #fff;
+}
+
+@media (max-width: 768px) {
+    .catalog{
+        margin-bottom: 10px;
+    }
+    .catalog_body{
+        padding: 10px 20px;
+    }
+    .name{
+        font-size: 30px;
+    }
+    .side{
+        width: 80px;
+        height: 80px;
+        font-size: 25px;
+    }
+}
+@media (max-width: 576px) {
+    .catalog{
+        width: 300px;
+        margin-bottom: 10px;
+    }
+    .catalog_body{
+        width: 200px;
+        margin: 0 5px;
+        padding: 10px 15px;
+    }
+    .name{
+        font-size: 26px;
+    }
+    .side{
+        font-size: 19px;
+        width: 50px;
+        height: 50px;
+    }
 }
