--- a/client/src/components/Footer/Footer.module.less
+++ b/client/src/components/Footer/Footer.module.less
@@ -5,38 +5,23 @@
     align-items: center;
 }
 .button{
-    border: 0.1vw solid #fff;
+    border: 2px solid #fff;
     background-color: transparent;
     cursor: pointer;
     transition: 0.5s;
-    padding: 1.1vw;
-    font-size: 1.5vw;
+    padding: 10px;
+    font-size: 35px;
+    transition: 0.5s;
+}
+.button:hover{
+    background-color: #fff;
+    color: #000;
 }
 .confirmButton{
-    margin: 0 2vw;
+    margin: 0 30px;
 }
-@media(max-width: 1200px) {
+@media (max-width: 575px) {
     .button{
-        font-size: 2.5vw;
-        padding: 1.5vw;
-    }
-}
-@media(max-width: 992px) {
-    .button{
-        font-size: 3vw;
-        padding: 1.7vw;
-    }
-}
-@media(max-width: 768px) {
-    .button{
-        font-size: 4vw;
-        padding: 2vw;
-    }
-}
-@media(max-width: 575px) {
-    .button{
-        max-width: 80%;
-        font-size: 7vw;
-        padding: 4vw;
+        font-size: 23px;
     }
 }
