--- a/client/src/components/ui/ModalKit/ModalList/ModalList.less
+++ b/client/src/components/ui/ModalKit/ModalList/ModalList.less
@@ -1,12 +1,39 @@
+.box{
+    padding: 50px;
+}
 .list{
     display: flex;
     justify-content: start;
     align-items: center;
     flex-direction: column;
+    max-height: 500px;
+    overflow-y: scroll;
+    background-color: #000;
+    width: 100%;
+    padding: 50px;
     &__item{
         padding: 10px 20px;
-        font-size: 25px;
+        font-size: 25px; 
+        color: #000;
+        background-color: #fff;
+        border: 2px solid #fff;
+        width: 250px;
+        cursor: pointer;
+        position: relative;
+        margin: 15px 0;
+        transition: 0.5s;
+    }
+    &__item:hover{
+        transform: scale(1.2); 
+        background-color: #000;
         color: #fff;
-        border-bottom: 2px solid #fff;
+    }
+}
+@media (max-width: 575px) {
+    .box{
+        padding: 50px 15px;
+    }
+    .list{
+        padding: 50px 0;
     }
 }
