--- a/client/src/pages/Catalogs/Catalogs.less
+++ b/client/src/pages/Catalogs/Catalogs.less
@@ -4,6 +4,7 @@
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
+    padding-bottom: 30px;
 }
 .header{
     padding: 50px;
@@ -28,4 +29,13 @@
 }
 .catalogs{
     margin-top: 50px;
+}
+@media (max-width: 575px) {
+    .header{
+        padding: 15px 15px 0 15px;  
+        margin-bottom: 30px;
+    }
+    .catalogs{
+        margin-top: 30px;
+    }
 }
